WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159248
[JSC] Fix small issues of TypedArray prototype
https://bugs.webkit.org/show_bug.cgi?id=159248
Summary
[JSC] Fix small issues of TypedArray prototype
Benjamin Poulain
Reported
2016-06-28 22:18:09 PDT
[JSC] Fix small issues of TypedArray prototype
Attachments
Patch
(17.09 KB, patch)
2016-06-28 22:20 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-06-28 22:20:11 PDT
Created
attachment 282320
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-28 22:21:32 PDT
Attachment 282320
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/JSGlobalObject.cpp:369: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2016-06-29 11:16:55 PDT
Comment on
attachment 282320
[details]
Patch Clearing flags on attachment: 282320 Committed
r202631
: <
http://trac.webkit.org/changeset/202631
>
WebKit Commit Bot
Comment 4
2016-06-29 11:16:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug