[JSC] Fix small issues of TypedArray prototype https://bugs.webkit.org/show_bug.cgi?id=159248

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-06-29
Reviewed by Saam Barati.

Source/JavaScriptCore:

First, TypedArray's toString and Array's toString
should be the same function.
I moved the function to GlobalObject and each array type
gets it as needed.

Then TypedArray length was supposed to be configurable.
I removed the "DontDelete" flag accordingly.

* runtime/ArrayPrototype.cpp:
(JSC::ArrayPrototype::finishCreation):
* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):
(JSC::JSGlobalObject::visitChildren):
* runtime/JSGlobalObject.h:
(JSC::JSGlobalObject::arrayProtoToStringFunction):
* runtime/JSTypedArrayViewPrototype.cpp:
(JSC::JSTypedArrayViewPrototype::finishCreation):

LayoutTests:

* js/script-tests/typedarray-prototype.js: Added.
* js/typedarray-prototype-expected.txt: Added.
* js/typedarray-prototype.html: Added.

Canonical link: https://commits.webkit.org/177377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202631 268f45cc-cd09-0410-ab3c-d52691b4dbfc